--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicom.avif" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicom.avif" type="image/x-icon">
     <!--------BS 5.1 inicia -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -23,7 +23,7 @@
                 <header>
                     <nav class="navbar navbar-expand-md navbar-dark">
                         <div class="container-fluid">
-                            <a class="navbar-brand" href="index.html">Ruteros</a>
+                            <a class="navbar-brand" href="../index.html">Ruteros</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapsibleNavbar">
                                 <span class="navbar-toggler-icon"></span>
@@ -32,16 +32,16 @@
                                 <ul class="navbar-nav">
             
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./pages/galeria.html">Galeria</a>
+                                        <a class="nav-link" href="./galeria.html">Galeria</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./pages/destinos.html">Destinos</a>
+                                        <a class="nav-link" href="./destinos.html">Destinos</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./pages/experiencias.html">Experiencias</a>
+                                        <a class="nav-link" href="./experiencias.html">Experiencias</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./pages/contanos.html">Contanos</a>
+                                        <a class="nav-link" href="./contanos.html">Contanos</a>
                                     </li>
                                 </ul>
                             </div>
