--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicom.avif" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicom.avif" type="image/x-icon">
     <!--------BS 5.1 inicia -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,45 +19,45 @@
     <title>Mira los paisajes mas increibles</title>
 </head>
 <body>
-                <!-- inicia barra navegacion -->
-                <header>
-                    <nav class="navbar navbar-expand-md navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="../index.html">Ruteros</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapsibleNavbar">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                                <ul class="navbar-nav">
-            
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="../pages/galeria.html">Galeria</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./pages/destinos.html">Destinos</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./pages/experiencias.html">Experiencias</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./pages/contanos.html">Contanos</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                    <!-- finaliza barra navegacion -->
-                </header>
-                <main class="call">
-                    <div class="call">
-                        <h1>Viajar en moto</h1>
-                            <p>Viajar en moto es algo magico, el recorrer montañas, sentir el viento poder frenar en cualquier lugar y entrar a cualquier camino.</p>
+        <!-- inicia barra navegacion -->
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html">Ruteros</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+    
+                            <li class="nav-item">
+                                <a class="nav-link" href="./galeria.html">Galeria</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./destinos.html">Destinos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./experiencias.html">Experiencias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contanos.html">Contanos</a>
+                            </li>
+                        </ul>
                     </div>
-                </main>
-                <div class="call1">
-                    <h2>Ruteando en moto</h2>
-                    <p>Viajar en moto es una experiencia liberadora que te permite conectar con la naturaleza y sentir la brisa en tu rostro mientras recorres nuevos paisajes. El rugido del motor se convierte en tu banda sonora, llevándote a lugares lejanos y desconocidos. Cada curva es una aventura, cada parada una oportunidad para descubrir algo nuevo. La sensación de libertad que experimentas al viajar en moto es incomparable, haciéndote sentir vivo y en armonía con el mundo que te rodea. ¡Prepárate para una emocionante travesía llena de adrenalina y descubrimientos!
+                </div>
+            </nav>
+            <!-- finaliza barra navegacion -->
+        </header>
+        <main class="call">
+            <div class="call">
+                <h1>Viajar en moto</h1>
+                    <p>Viajar en moto es algo magico, el recorrer montañas, sentir el viento poder frenar en cualquier lugar y entrar a cualquier camino.</p>
+            </div>
+        </main>
+        <div class="call1">
+            <h2>Ruteando en moto</h2>
+            <p>Viajar en moto es una experiencia liberadora que te permite conectar con la naturaleza y sentir la brisa en tu rostro mientras recorres nuevos paisajes. El rugido del motor se convierte en tu banda sonora, llevándote a lugares lejanos y desconocidos. Cada curva es una aventura, cada parada una oportunidad para descubrir algo nuevo. La sensación de libertad que experimentas al viajar en moto es incomparable, haciéndote sentir vivo y en armonía con el mundo que te rodea. ¡Prepárate para una emocionante travesía llena de adrenalina y descubrimientos!
         </p>
     </div>
     <!-- inicio galeria con grids y media queris -->
