--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En Ruteros queremos transmitirte la pasion de viajar por nuestro hermoso pais Argentina, queremos incentivarte a recorrerlo. Te contamos nuestras experiencias y te damos recomendaciones.">
+    <meta name="keywords" content="ruteros,ruta,moto,auto,motorhome,camper,viajes,viajesmoto,cordoba,sanluis,larioja,turismo,iguazu,viajemos,argentina,messi,latercera,">
     <link rel="shortcut icon" href="./img/favicom.avif" type="image/x-icon">
     <!--------BS 5.1 inicia -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
