--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -1,64 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En Ruteros queremos transmitirte la pasion de viajar por nuestro hermoso pais Argentina, queremos incentivarte a recorrerlo. Te contamos nuestras experiencias y te damos recomendaciones.">
+    <meta name="keywords" content="ruteros,ruta,moto,auto,motorhome,camper,viajes,viajesmoto,cordoba,sanluis,larioja,turismo,iguazu,viajemos,argentina,messi,latercera,">
     <link rel="shortcut icon" href="../img/favicom.avif" type="image/x-icon">
     <!--------BS 5.1 inicia -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- importo fuentes -->
+    <!-- importo fuentes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- importo iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- fin iconos -->
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>Document</title>
+    <title>Agunas experiencias propias</title>
 </head>
+
 <body>
-                <!-- inicia barra navegacion -->
-                <header>
-                    <nav class="navbar navbar-expand-md navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="../index.html">Ruteros</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapsibleNavbar">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                                <ul class="navbar-nav">
-            
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./galeria.html">Galeria</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./destinos.html">Destinos</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./experiencias.html">Experiencias</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./contanos.html">Contanos</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                    <!-- finaliza barra navegacion -->
-                </header>
+    <!-- inicia barra navegacion -->
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Ruteros</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
 
+                        <li class="nav-item">
+                            <a class="nav-link" href="./galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./destinos.html">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./experiencias.html">Experiencias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contanos.html">Contanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- finaliza barra navegacion -->
+    </header>
 
+    <main class="experiencias">
+        <div class="experiencia">
+            <h1>Compartimos</h1>
+            <p>Esta bueno tambien compartir las experiencias de nuestros viajes, aqui les compartimos algunas.
+                Envianos las tuyas para sumar a la comunidad
+            </p>
+            <a href="./contanos.html">Contanos</a>
+        </div>
+    </main>
+    <section class="card">
+        <h2 class="h2exp">Te cuento algunas de mis experiencias</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="../img/card-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Rosario a Neuquen</h5>
+                        <p class="card-text">Maneje una partner 1200km y valio ca uno de ellos. Partiendo desde rosario pase por lugares realmente fantasticos y visite ciudades hermosas como Venado Tuerto, Gral Villegas,Gral Pico,el dique sobre el Rio Neuquen.Una experiencia inolvidable.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../img/card1-2-iguazu.jpg" class="card-img-top" alt="cataratas iguazu">
+                    <div class="card-body">
+                        <h5 class="card-title">Rosario a Iguazu</h5>
+                        <p class="card-text">Pude viajar 2 veces hacia Pto Iguazu, ruteando desde rosario. Y la verdad que lo super recomiendo, desde rosario tenemos 2 opciones de ruta ambas muy bonitas.Y la provincia de misiones hermosa con sus rutas rodeadas de selva naturaleza pura.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../img/card1-3-cordoba.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Sierras de Cordoba</h5>
+                        <p class="card-text">Gracias a dios he tenido la oportunidad de recorrer varias veces la provincia de cordoba en varios vehiculos y es hermosa en todo. Sus diques,lagos,cerros,etc una provincia expectacular para rutear en cualquiera sea tu vehiculo.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../img/card2-1-salta.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Salta la linda</h5>
+                        <p class="card-text">Esta es una de mis favoritas, pude rutearla muchas veces por trabajo pero la disfrute en lo maximo. Hermosa por donde la mires y todo lo que busques una provincia completa.Algun dia la volvere a recorrer pero por placer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../img/card5-2-larioja.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">La Rioja</h5>
+                        <p class="card-text">La recorri por trabajo, pero quede enamorado de esta hermosa provincia. Con sus rutas etre montañas, sus pequeños y acogedores plueblos en lo alto, una provincia totalmete hermosa.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../img/card-6-2-bsas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Buenos Aires</h5>
+                        <p class="card-text">Esta provincia la he recorrido casi en su totalidad ya sea por trabajo o por placer es un provincia muy completa, tenes de todo grandes ciudades, playas,mar,montañas.etc</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </section>
 
+    <!-- inicia footer -->
+    <footer>
+        <p>Porque viajar al exterior si nuestro pais lo tiene todo?</p>
+        <p>Visita nuestro sitio frecuentemente y admirate de las bellezas de nuestro pais</p>
+        <div class="redes">
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
+        </div>
+    </footer>
+    <a href="#" class="subir">
+        <i class="fa-solid fa-angle-up"></i>
+    </a>
     <!-- script -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
