final de la tercera pre-entrega

--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -70,7 +70,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="../img/card-1.jpg" class="card-img-top" alt="...">
+                    <img src="../img/card-1.jpg" class="card-img-top" alt="foto neuquen">
                     <div class="card-body">
                         <h5 class="card-title">Rosario a Neuquen</h5>
                         <p class="card-text">Maneje una partner 1200km y valio ca uno de ellos. Partiendo desde rosario pase por lugares realmente fantasticos y visite ciudades hermosas como Venado Tuerto, Gral Villegas,Gral Pico,el dique sobre el Rio Neuquen.Una experiencia inolvidable.</p>
@@ -88,7 +88,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../img/card1-3-cordoba.jpg" class="card-img-top" alt="...">
+                    <img src="../img/card1-3-cordoba.jpg" class="card-img-top" alt="foto sierras de cordoba">
                     <div class="card-body">
                         <h5 class="card-title">Sierras de Cordoba</h5>
                         <p class="card-text">Gracias a dios he tenido la oportunidad de recorrer varias veces la provincia de cordoba en varios vehiculos y es hermosa en todo. Sus diques,lagos,cerros,etc una provincia expectacular para rutear en cualquiera sea tu vehiculo.</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../img/card2-1-salta.jpg" class="card-img-top" alt="...">
+                    <img src="../img/card2-1-salta.jpg" class="card-img-top" alt="foto tren de las nubes">
                     <div class="card-body">
                         <h5 class="card-title">Salta la linda</h5>
                         <p class="card-text">Esta es una de mis favoritas, pude rutearla muchas veces por trabajo pero la disfrute en lo maximo. Hermosa por donde la mires y todo lo que busques una provincia completa.Algun dia la volvere a recorrer pero por placer.</p>
@@ -106,7 +106,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../img/card5-2-larioja.jpg" class="card-img-top" alt="...">
+                    <img src="../img/card5-2-larioja.jpg" class="card-img-top" alt="foto chilecito la rioja">
                     <div class="card-body">
                         <h5 class="card-title">La Rioja</h5>
                         <p class="card-text">La recorri por trabajo, pero quede enamorado de esta hermosa provincia. Con sus rutas etre montañas, sus pequeños y acogedores plueblos en lo alto, una provincia totalmete hermosa.</p>
@@ -115,7 +115,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../img/card-6-2-bsas.jpg" class="card-img-top" alt="...">
+                    <img src="../img/card-6-2-bsas.jpg" class="card-img-top" alt="foto cuidad y mar en mar del plata">
                     <div class="card-body">
                         <h5 class="card-title">Buenos Aires</h5>
                         <p class="card-text">Esta provincia la he recorrido casi en su totalidad ya sea por trabajo o por placer es un provincia muy completa, tenes de todo grandes ciudades, playas,mar,montañas.etc</p>
