--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-md-6 col-xs-12">
                     <div class="card">
-                        <img class="card-img-top" src="../img/2galery3f.jpg" alt="Card image">
+                        <img class="card-img-top" src="../img/2galery3f.jpg" alt="moto entre montañas">
                         <div class="card-body">
                         <p class="card-text">La locura de poder adentrarte a explorar en el paisaje o acampar en el                
                         </p>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="card">
-                        <img class="card-img-top" src="../img/1-galery3f.jpg" alt="Card image">
+                        <img class="card-img-top" src="../img/1-galery3f.jpg" alt="dibujo de motorhome con fondo de montañas">
                         <div class="card-body">
                         <p class="card-text">Que placer poder frenar a descansar, acampar frente a un hermoso paisaje
                         </p>
