--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
                         <div class="card">
-                            <img class="card-img-top" src="./img/seg-vial-index.jpg" alt="Card image">
+                            <img class="card-img-top" src="./img/seg-vial-index.jpg" alt="autos policia">
                             <div class="card-body">
                             <h4 class="card-title">Informate</h4>
                             <p class="card-text">Visita este link e informate sobre seguridad vial.
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-md-6 col-xs-12">
                         <div class="card">
-                            <img class="card-img-top" src="./img/map-index.jpg" alt="Card image">
+                            <img class="card-img-top" src="./img/map-index.jpg" alt="mapa y auto">
                             <div class="card-body">
                             <h4 class="card-title">Anticipate</h4>
                             <p class="card-text">Visita el link e informate sobre la mejor ruta, consumos de combustible y buenas paradas.
